feat: add `/ip` endpoint to return client's IP address
